# EASY-EAI-Toolkit-3588

./: .gitignore  LICENSE  README.md  README_EN.md
Demos/: build_all_demo.sh
Demos/algorithm-car/: CMakeLists.txt  test-car_detect.cpp
Demos/algorithm-face_detect/: CMakeLists.txt  test-face-detect.cpp
Demos/algorithm-face_recognition/: CMakeLists.txt
Demos/algorithm-fire/: CMakeLists.txt  test-fire_detect.cpp
Demos/algorithm-helmet/: CMakeLists.txt  test-helmet_detect.cpp
Demos/algorithm-ocr/: CMakeLists.txt  test-ocr.cpp
Demos/algorithm-person/: CMakeLists.txt  test-person_detect.cpp
Demos/algorithm-qrdecode/: CMakeLists.txt  test-qrdecode.cpp
Demos/common-base64/: CMakeLists.txt  build.sh
Demos/common-font_engine/: CMakeLists.txt  test-font_engine.cpp
Demos/common-http/: CMakeLists.txt  test-http.c  test-http_client.c  test-http_server.cpp
Demos/common-ini/: CMakeLists.txt  test-iniWrapper.c
Demos/common-modbus/: CMakeLists.txt  test-modbus_tcp_slave.c
Demos/common-qrcode/: CMakeLists.txt  build.sh  test-QRCode.c
Demos/common-system_opt/: CMakeLists.txt  test-timepara-opt.c
Solutions/: build_all_solu.sh
Solutions/avs/: CMakeLists.txt  build.sh
Solutions/avs/config/6x_rectlinear/avs_calib/: calib_file.pto
Solutions/avs/include/: system.h
Solutions/avs/src/: main.cpp
Solutions/avs/src/test_comm/: test_comm_imgproc.cpp  test_comm_utils.cpp  test_comm_vpss.cpp  test_comm_vpss.h
Solutions/rtspIPCamera/: CMakeLists.txt
Solutions/rtspIPCamera/include/: config.h
Solutions/rtspIPCamera/src/: appSource.cpp  appSource.h  main.cpp
Solutions/rtspIPCamera/src/camera/usb_camera/: usb_camera.c  vpu_decode.h
Solutions/rtspMulitPlayer/: .CMakeLists.txt.swp  CMakeLists.txt  build.sh
Solutions/rtspMulitPlayer/config/: rtspClient.ini
Solutions/rtspMulitPlayer/src/: main.cpp
Solutions/rtspMulitPlayer/src/analyzer/: algoProcess.cpp  algoProcess.h  analyzer.cpp  analyzer.h
Solutions/rtspMulitPlayer/src/capturer/: capturer.cpp  capturer.h  decChannel.cpp  decChannel.h
Solutions/rtspMulitPlayer/src/playChannel/: playChn.cpp  playChn.h
Solutions/rtspMulitPlayer/src/player/: display.cpp  display.h
Solutions/rtspServer/: CMakeLists.txt
Solutions/rtspServer/src/: main.cpp
Solutions/rtspServer/src/gstSource/: appSource.cpp  appSource.h  fileSource.cpp  fileSource.h  srcCommon.h
Solutions/rtspServer/src/gstSource/camera/: camera.h  mipi_camera.c
Solutions/rtspServer/src/gstSource/camera/usb_camera/: clist.c  rga_control.c
UiSolutions/QDemo/: QDemo.pro  build.sh
UiSolutions/QDemo/QResource/: resource.qrc
UiSolutions/QDemo/QSrcCode/apiWrapper/: api.pri
UiSolutions/QDemo/QSrcCode/common/ini/: ini_wrapper.c  ini_wrapper.h
UiSolutions/QDemo/QSrcCode/ui/: main.cpp  mainWidget.cpp  mainWidget.h  mainWidget.ui
easyeai-api/algorithm/car_detect/: api.cmake  car_detect.h  postprocess.h
easyeai-api/algorithm/face_detect/: api.cmake
easyeai-api/algorithm/face_recognition/: api.cmake
easyeai-api/algorithm/fire_detect/: api.cmake  fire_detect.h
easyeai-api/algorithm/helmet_detect/: api.cmake  helmet_detect.h  postprocess.h
easyeai-api/algorithm/ocr/: api.cmake
easyeai-api/algorithm/person_detect/: api.cmake  person_detect.h  postprocess.h
easyeai-api/algorithm/qrdecode/: api.cmake
easyeai-api/common/base64/: api.cmake
easyeai-api/common/font_engine/: CvxText.cpp  api.cmake
easyeai-api/common/gst_opt/: api.cmake  gst_opt.h
easyeai-api/common/http/: api.cmake  https_request.cpp
easyeai-api/common/ini/: api.cmake  ini_wrapper.c
easyeai-api/common/modbus/: api.cmake  config.h
easyeai-api/common/mqtt/: api.cmake
easyeai-api/common/qrcode/: api.cmake
easyeai-api/common/rk_mpi/: api.cmake
easyeai-api/common/system_opt/: api.cmake
